# ascii-telnet-rust

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml
.github/: renovate.json
.github/workflows/: docker.yml
movies/: sw1.txt
src/: main.rs  movie.rs  movie_client.rs  signal_handler.rs  signals.rs
