[package]
name = "ascii-telnet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
once_cell = "1.17.1"
signal-hook = "0.3.15"
anyhow = "1.0.69"

[dependencies.async-std]
version = "1.12"
features = ["attributes"]